--- a/src/components/CiimView/CiimView.css
+++ b/src/components/CiimView/CiimView.css
@@ -1,36 +1,38 @@
+@import '@folio/stripes-components/lib/variables.css';
+
+
 .filterPaneButton {
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: var(--gutter-static-two-thirds);
 }
 
 .searchFieldContainer {
   flex-grow: 1;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: var(--gutter-static-two-thirds);
+
 }
 
 .searchButton{
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: var(--gutter-static-two-thirds);
+}
+
+.divider {
+  margin-left: var(--gutter-static-two-thirds);
 }
 
 .searchContainer {
   display: inline-flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-grow: 1;
   align-items: center;
-  margin-left: 5px;
-  margin-right: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
+  margin-left: var(--gutter-static-two-thirds);
+  padding-left: var(--gutter-static-two-thirds);
 }
 
 .paneHeaderContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-grow: 1;
   align-items: center;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: var(--gutter-static-two-thirds);
 }
